# swodlr-ingest-to-sds

./: .gitignore  CHANGE  README.md  build.sh  bumpver.toml  example.env  pyproject.toml
.github/workflows/: build.yml
podaac/swodlr_ingest_to_sds/: __main__.py  bootstrap.py  errors.py  poll_status.py  submit_to_sds.py  utilities.py  utils.py
terraform/: .terraform.lock.hcl  database_dynamodb.tf  lambdas.tf  main.tf  messaging.tf  network.tf  stepfunction.tf  variables.tf
terraform/environments/: ops.env  sit.env  uat.env
tests/: test_bootstrap.py  test_poll_status.py  test_submit_to_sds.py
tests/data/: invalid_event.json  invalid_sqs_event.json  poll_event.json  valid_event.json
