[tool.poetry]
name = "swodlr-ingest-to-sds"
version = "0.0.1"
description = "A system for ingesting input products for the SWOT SDS"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "podaac" }
]

[tool.poetry.dependencies]
python = "^3.9"
otello = {git = "https://github.com/hysds/otello.git", branch = "develop"}

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.59"
pytest = "^7.2.1"
python-dotenv = "^0.21.1"
flake8 = "^6.0.0"
bumpver = "^2022.1120"
pylint = "^2.16.2"

[tool.poetry.scripts]
ingest = 'podaac.swodlr_ingest_to_sds.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
